<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ejc.appli.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/signatureLogo"
        android:src="@mipmap/logo_long"
        android:contentDescription="@string/contentDescLogoEjC"
        app:layout_constraintBottom_toTopOf="@id/signatureAppli"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signatureAppli"
        android:gravity="center"
        android:text="@string/aboutApp"
        app:layout_constraintBottom_toTopOf="@id/allrightreserved"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signatureLogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/allrightreserved"
        android:layout_height="wrap_content"
        android:text="@string/mentionlegalEjC"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signatureAppli" />

</android.support.constraint.ConstraintLayout>