<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_margin="8dp"
            android:elevation="3dp"
            android:orientation="vertical"
            android:layout_height="550dp"
            tools:targetApi="lollipop">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="30sp"
                android:id="@+id/nomJer"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                tools:ignore="HardcodedText"
                android:contentDescription="Logo de chaque JE des JER"
                android:id="@+id/logoJers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:id="@+id/descJer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:layout_gravity="start"
                android:text="@string/JERstatut"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:layout_gravity="start"
                android:id="@+id/JERdateCrea"
                android:text="@string/JERdateCre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:layout_gravity="start"
                android:id="@+id/JERdatePM"
                android:text="@string/sringJERdatePM"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:text="@string/stringJERdomComp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_margin="10dp"
                android:id="@+id/compJer"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>